# Projet-C-CIR1

./: .gitignore  CMakeLists.txt  README.md  book.txt  chapter.c  chapter.h  chapter_array.c  chapter_array.h  main.c  read_book.c  read_book.h  utils.c  utils.h  write_html.c  write_html.h
src/: chapter.c  main.c  read_book.c  utils.c
web/: chapter.html  end.html  index.html  test.html
web/css/: chapter.css  nav.css  style.css  test.css
web/js/: game.js  gameEngine.js  gameStory.js  index.js
